# github_release_monitor_bot

./: .dockerignore  .editorconfig  .env.default  LICENSE  Makefile  README.md  bot_controller.py  docker-compose.yml  main.py  models.py  pyproject.toml  release_monitor.py  utils.py
.ci/: Dockerfile
.github/workflows/: linters.yml
app/: db_helper.py  main.py  models.py  settings.py
app/bot_controller/: bot_controller.py
app/bot_controller/services/: __init__.py  subscriptions.py
app/release_monitor/: __init__.py  release_monitor.py
app/release_monitor/services/: github.py
