[tool.poetry]
name = "github-release-monitor-bot"
version = "0.1.3"
description = "Simple release monitor for github repositories based on telegram bot"
authors = ["Ilia Soltanov piccadillable@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "github_release_monitor_bot" }]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
greenlet = "^3.0.3"
aiosqlite = "^0.19.0"
ujson = "^5.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
pylint = "^3.0.3"
safety = "^2.3.5"
bandit = "^1.7.6"

[tool.bandit]
exclude_dirs = [
    "venv",
    ".venv",
]

[tool.flake8]
max-line-length = 140
exclude = [
    "venv/*",
    ".venv/*",
]

[tool.pylint.design]
min-public-methods = 0
max-public-methods = 50

[tool.pylint.format]
max-line-length = 140
max-module-lines = 500
max-locals = 20

[tool.pylint.typecheck]
ignored-classes = [
    "ujson",
]

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
